...

    <!-- Activity and fragment titles -->
    <string name="provider_authority" translatable="false">ac.mdiq.podcini.provider</string>
    <string name="feed_update_receiver_name">Update subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="home_label">Home</string>
    <string name="queue_label">Queue</string>
    <string name="inbox_label">Inbox</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="open_autodownload_settings">Open settings</string>
    <string name="downloads_log_label">Download log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions list</string>
    <string name="cancel_download_label">Cancel download</string>
    <string name="playback_history_label">Playback history</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
    <string name="years_statistics_label">Years</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="current_playing_episode">Current</string>
    <string name="podcini_echo" translatable="false">Podcini Echo</string>
...
    <string name="clear_history_label">Clear history</string>
    <string name="clear_playback_history_msg">This will clear the entire playback history. Are you sure you want to proceed?</string>
    <string name="remove_history_label">Remove from history</string>
    <string name="removed_history_label">Removed from history</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="global_default">Global default</string>
    <string name="url_label">URL</string>
...
    <string name="position_default_label" translatable="false">00:00:00</string>
    <string name="unknown_media_key">Podcini - Unknown media key: %1$d</string>
    <string name="error_file_not_found">File not found</string>
    <string name="no_media_label">Item does not contain a media file</string>

    <!-- Queue operations -->
    <string name="lock_queue">Lock queue</string>
    <string name="queue_locked">Queue locked</string>
    <string name="queue_unlocked">Queue unlocked</string>
    <string name="queue_lock_warning">If you lock the queue, you can no longer swipe or reorder episodes.</string>
    <string name="checkbox_do_not_show_again">Do not show again</string>
    <string name="clear_queue_label">Clear queue</string>
    <string name="undo">Undo</string>
    <string name="move_to_top_label">Move to top</string>
    <string name="move_to_bottom_label">Move to bottom</string>
    <string name="sort">Sort</string>
    <string name="keep_sorted">Keep sorted</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="episode_title">Episode title</string>
    <string name="feed_title">Podcast title</string>
    <string name="random">Random</string>
    <string name="smart_shuffle">Smart shuffle</string>
    <string name="size">Size</string>
    <string name="clear_queue_confirmation_msg">Please confirm that you want to clear the queue of ALL of the episodes in it</string>
    <string name="time_left_label">Time left:\u0020</string>

    <!--  Variable Speed -->
...
