<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout">

    <!-- InconsistentLayout: Tablet layout does not have a drawer -->
    <!-- viewBindingIgnore: Configurations for main.xml must
            agree on the root element's ID -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/overview_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:foreground="?android:windowContentOverlay"
            tools:background="@android:color/holo_red_dark" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/audioplayerFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/colorBackground"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navDrawerFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical" />

</androidx.drawerlayout.widget.DrawerLayout>
